[gd_scene load_steps=9 format=3 uid="uid://biqtt0tcww12c"]

[ext_resource type="Script" path="res://Scripts/player_controller.gd" id="1_i36np"]
[ext_resource type="Texture2D" uid="uid://dv5ul0lcqba2a" path="res://Sprites/Sprout.png" id="2_7gk2i"]
[ext_resource type="PackedScene" uid="uid://dcdsm5qjwh22o" path="res://Scenes/holyburst.tscn" id="2_37rld"]
[ext_resource type="Texture2D" uid="uid://cr4pysc862iqs" path="res://Sprites/Leaf.png" id="3_1klon"]
[ext_resource type="Shader" path="res://Shaders/ripple.gdshader" id="3_x2v5t"]
[ext_resource type="Texture2D" uid="uid://g5b1h0m5o2s7" path="res://Sprites/Roots_Game_Root_Levels.png" id="4_8g363"]
[ext_resource type="Texture2D" uid="uid://dw3mqa2b2mtwq" path="res://Sprites/Roots_Game_Line.png" id="5_y10kg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vbukx"]
shader = ExtResource("3_x2v5t")
shader_parameter/HOLY_ORANGE = Vector3(1, 0.71, 0.14)
shader_parameter/SPEED = 20.0
shader_parameter/effect_origin = Quaternion(0.5, 0.5, 1, 0)
shader_parameter/RTIME = 0.001

[node name="PlayerController" type="Node"]
script = ExtResource("1_i36np")

[node name="Tree" type="Node2D" parent="."]
position = Vector2(-213, -102)

[node name="Size_1" type="Node2D" parent="Tree"]
position = Vector2(540, 410)

[node name="Sprite2D" type="Sprite2D" parent="Tree/Size_1"]
texture = ExtResource("2_7gk2i")

[node name="Leaf1" type="Node2D" parent="Tree/Size_1"]
visible = false
position = Vector2(5, -18)

[node name="Sprite2D" type="Sprite2D" parent="Tree/Size_1/Leaf1"]
rotation = -3.47146
scale = Vector2(0.215, 0.215)
texture = ExtResource("3_1klon")

[node name="Leaf2" type="Node2D" parent="Tree/Size_1"]
visible = false
position = Vector2(-16, -14)

[node name="Sprite2D2" type="Sprite2D" parent="Tree/Size_1/Leaf2"]
rotation = 1.31598
scale = Vector2(0.215, 0.215)
texture = ExtResource("3_1klon")

[node name="Leaf3" type="Node2D" parent="Tree/Size_1"]
visible = false
position = Vector2(17, -10)

[node name="Sprite2D3" type="Sprite2D" parent="Tree/Size_1/Leaf3"]
rotation = 4.18879
scale = Vector2(0.215, 0.215)
texture = ExtResource("3_1klon")

[node name="Size_2" type="Node2D" parent="Tree"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Tree/Size_2"]

[node name="Size_3" type="Node2D" parent="Tree"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Tree/Size_3"]

[node name="RootBase" type="Node2D" parent="Tree"]
position = Vector2(539, 485)

[node name="Sprite2D" type="Sprite2D" parent="Tree/RootBase"]
texture = ExtResource("4_8g363")
hframes = 4

[node name="Root_1" type="Node2D" parent="Tree/RootBase"]
visible = false

[node name="Sprite2D" type="Line2D" parent="Tree/RootBase/Root_1"]
texture_repeat = 2
position = Vector2(27, -35)
points = PackedVector2Array(0, 0, 10, 10)
texture = ExtResource("5_y10kg")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Root_2" type="Node2D" parent="Tree/RootBase"]
visible = false
position = Vector2(-39, 2)

[node name="Sprite2D" type="Line2D" parent="Tree/RootBase/Root_2"]
texture_repeat = 2
position = Vector2(27, -35)
points = PackedVector2Array(0, 0, 0, 25)
texture = ExtResource("5_y10kg")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Root_3" type="Node2D" parent="Tree/RootBase"]
visible = false
position = Vector2(-20, 1)

[node name="Sprite2D" type="Line2D" parent="Tree/RootBase/Root_3"]
texture_repeat = 2
position = Vector2(27, -35)
points = PackedVector2Array(0, 0, 0, 25)
texture = ExtResource("5_y10kg")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Root_4" type="Node2D" parent="Tree/RootBase"]
visible = false
position = Vector2(-57, 3)

[node name="Sprite2D" type="Line2D" parent="Tree/RootBase/Root_4"]
texture_repeat = 2
position = Vector2(27, -35)
points = PackedVector2Array(0, 0, -10, 10)
texture = ExtResource("5_y10kg")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="MainControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeMenu" type="VBoxContainer" parent="MainControl"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="MainControl/UpgradeMenu"]
layout_mode = 2

[node name="Button" type="Button" parent="MainControl/UpgradeMenu/MarginContainer"]
layout_mode = 2
text = "Grow Leaf"

[node name="MarginContainer2" type="MarginContainer" parent="MainControl/UpgradeMenu"]
layout_mode = 2

[node name="Button" type="Button" parent="MainControl/UpgradeMenu/MarginContainer2"]
layout_mode = 2
text = "Grow Root"

[node name="MarginContainer3" type="MarginContainer" parent="MainControl/UpgradeMenu"]
layout_mode = 2

[node name="Button" type="Button" parent="MainControl/UpgradeMenu/MarginContainer3"]
layout_mode = 2
text = "Sprout?"

[node name="VBoxContainer" type="VBoxContainer" parent="MainControl"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MainControl/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainControl/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sun:"

[node name="Label2" type="Label" parent="MainControl/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainControl/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainControl/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Water:"

[node name="Label2" type="Label" parent="MainControl/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="MainControl/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainControl/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Sugar:"

[node name="Label2" type="Label" parent="MainControl/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="MainControl"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MainControl/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MainControl/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "Holy Burst"

[node name="MarginContainer2" type="MarginContainer" parent="MainControl/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MainControl/HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Water of Life"

[node name="MarginContainer3" type="MarginContainer" parent="MainControl/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MainControl/HBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Photosynthesize"

[node name="Panel" parent="MainControl" instance=ExtResource("2_37rld")]
material = SubResource("ShaderMaterial_vbukx")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="holy_burst" from="." to="MainControl/Panel" method="_on_holy_burst"]
[connection signal="pressed" from="MainControl/UpgradeMenu/MarginContainer/Button" to="." method="_on_growleaf_button_pressed"]
[connection signal="pressed" from="MainControl/UpgradeMenu/MarginContainer2/Button" to="." method="_on_grow_root_button_pressed"]
[connection signal="pressed" from="MainControl/UpgradeMenu/MarginContainer3/Button" to="." method="_on_grow_tree_button_pressed"]
[connection signal="pressed" from="MainControl/HBoxContainer/MarginContainer/Button" to="." method="_on_hb_button_pressed"]
[connection signal="pressed" from="MainControl/HBoxContainer/MarginContainer2/Button" to="." method="_on_wh_button_pressed"]
[connection signal="pressed" from="MainControl/HBoxContainer/MarginContainer3/Button" to="." method="_on_sg_button_pressed"]
